--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="resources/fontawesome-all.min.css">
         <link rel="stylesheet" href="./resources/ol-layerswitcher.css">
         <link rel="stylesheet" href="./resources/qgis2web.css">
+	<link rel="stylesheet" href="./styles/legend/legend.css">
         <style>
         .ol-geocoder.gcd-gl-container {
             top: 135px!important;
@@ -124,8 +125,8 @@
 </style>
         <style>
         #map {
-            width: 705px;
-            height: 580px;
+            width: 100%;
+            height: 100%;
         }
         </style>
         <title></title>
@@ -137,9 +138,10 @@
                 <div id="popup-content"></div>
             </div>
         </div>
+	<div><img class="legend" src="./images/legend.JPG" alt="Умовні позначення" height="200"></div>
         <script src="resources/qgis2web_expressions.js"></script>
 <script src="resources/proj4.js"></script>
-        <script>proj4.defs('EPSG:3395','+proj=merc +lon_0=0 +k=1 +x_0=0 +y_0=0 +datum=WGS84 +units=m +no_defs');</script>
+        <script>proj4.defs('EPSG:32636','+proj=utm +zone=36 +datum=WGS84 +units=m +no_defs');</script>
         <script src="resources/polyfills.js"></script>
         <script src="./resources/functions.js"></script>
         <script src="./resources/ol.js"></script>
